# fac-fastapi-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.es  README.MD
src/: main.rs
src/cli/: commands.rs  mod.rs  options.rs  parser.rs  update_checker.rs
src/handlers/: features.rs  make.rs  mod.rs  new.rs  usecase.rs
src/utils/: fs.rs  mod.rs  string.rs  testing.rs
